--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head>
     <title>Dmitriy Bogush Portfolio</title>
 <head>
+    <nav>
+        <a href="#about">About</a> | 
+        <a href="#Experience">Experience</a> | 
+        <a href="#Projects">Projects</a> | 
+        <a href="#Contact">Contact</a> | 
+
+    </nav>
 <body>
 
 <h1>My First Heading</h1>
