--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 <head>
     <title>Dmitriy Bogush Portfolio</title>
+    <link rel="style" href="style.css"/>
 <head>
-    <nav>
-        <a href="#about">About</a> | 
-        <a href="#Experience">Experience</a> | 
-        <a href="#Projects">Projects</a> | 
-        <a href="#Contact">Contact</a> | 
+    <nav id="Homepage-Nav">
+        <a href="#about">About</a> 
+        <a href="#Experience">Experience</a>  
+        <a href="#Projects">Projects</a> 
+        <a href="#Contact">Contact</a>
 
     </nav>
 <body>
