--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <title>Dmitriy Bogush Portfolio</title>
     <link rel="style" href="style.css"/>
 <head>
+    
+<body>
+    <div class="name">Dmitriy Bogush</div>
+    <div>
     <nav id="Homepage-Nav">
         <a href="#about">About</a> 
         <a href="#Experience">Experience</a>  
         <a href="#Projects">Projects</a> 
         <a href="#Contact">Contact</a>
     </nav>
-<body>
-
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
-
+    </div>
 </body>
 </html> 
