--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
  <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8"/> 
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Dmitriy Bogush Portfolio</title>
-    <link rel="style" href="style.css"/>
+    <link rel="stylesheet" href="style.css"/>
 <head>
-    
 <body>
-
-    <div>
     <nav id="Homepage-Nav">
         <div class="name">Dmitriy Bogush</div>
-        <a href="#about">About</a> 
-        <a href="#Experience">Experience</a>  
-        <a href="#Projects">Projects</a> 
-        <a href="#Contact">Contact</a>
+        <div>
+            <ul class="nav-areas">
+                <li><a href="#about">About</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
     </nav>
-    </div>
+
 </body>
 </html> 
